methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:18: error: value unary_! is not a member of Int
while(!getX()==4) 
      ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:34: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:44: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:54: error: not found: value dogHouse
		dogHouse();		
                ^