methods.basics.MethodsDogHouse.scala.code
def avcolor()
{
  
  brushDown();
  forward();
  brushUp();
}


while(getX()!=1) 
{
 
  avcolor();
}

left();

while(!getX()==4) 
{
  avcolor();
}
